Modified to Java 1.8